platform/elastic/ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: elastic-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /elastic(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /kibana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
